# healthspan

./: .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint.yaml  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: bot-review-triage.md
.claude/agents/: spec-reviewer.md  test-reviewer.md
.claude/skills/apply-review/: SKILL.md
.claude/skills/coderabbit-review/: SKILL.md
.claude/skills/copilot-review/: SKILL.md
.claude/skills/gemini-review/: SKILL.md
.claude/skills/land/: SKILL.md
.claude/skills/repo-stats/: SKILL.md
.claude/skills/review-handoff/: SKILL.md
.claude/skills/review-prep/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/squash-merge/: SKILL.md
.claude/skills/wi/: SKILL.md
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md  dependabot.yml
.github/rulesets/: main-protection.json
.github/scripts/: gemini_review_agent.py
.github/workflows/: ci.yml  gemini-review.yml  publish.yml
scripts/: bot_review.py  check_adr_index.py  check_markdownlint_config_sync.py  check_spec_links.py  gemini_review_logic.py  repo_stats.py  scan_log_canary.py
specs/: README.md  adr-review-2026-07-17.md  api-reference.md  architecture-review-2026-06-10.md  architecture-review-2026-07-06-worklist.md  architecture-review-2026-07-06.md  architecture-review-2026-07-07.md  data-model.md  design-rationale.md  development-plan.md  glossary.md  lab-data-dimensions.md  manual-entry-quickstart.md  molar-mass-provenance.md  observability.md  open-questions.md  provenance-and-derived-data.md  reference-home-assistant-architecture.md  security.md  testing-strategy.md
specs/adr/: 0000-template.md  0001-mcp-server-language.md  0002-ai-provider-interface.md  0003-database-backend.md  0004-data-ingestion-strategy.md  0005-reference-range-frameworks.md  0006-application-architecture.md  0007-mcp-transport.md  0008-process-lifecycle.md  0009-database-migration.md  0010-cli-plugin-model.md  0011-event-bus.md  0012-job-abstraction.md  0013-encryption-at-rest.md  0014-websocket.md  0015-data-export.md  0016-automation-plugin-type.md  0017-notification-channels.md  0018-fhir-interoperability.md  0019-multi-device-sync.md  0020-plugin-registry.md  0021-time-series-aggregation.md  0022-semver.md  0023-distribution-mechanism.md  0024-plugin-extensions.md  0025-plugin-host-process-matrix.md  0026-named-scoped-tokens.md  0027-audit-trail-and-corrections.md  0028-key-derivation-and-rotation.md  0029-mcp-streamable-http.md  0030-biomarker-identity.md  0031-units-and-ucum.md  0032-biomarker-loinc-cardinality.md  0033-plaintext-artifact-disposal.md  0034-clinical-document-storage.md  0035-migration-execution-semantics.md  0036-plugin-package-installation-integrity.md  0037-core-service-concurrency-and-driver.md  0038-backup-execution-and-verification.md  0039-startup-sequence-and-passphrase-handoff.md  (+26 more)
specs/reviews/: README.md  adr-review-2026-07-17.md  architecture-review-2026-06-10.md  architecture-review-2026-07-06-worklist.md  architecture-review-2026-07-06.md  architecture-review-2026-07-07.md  architecture-review-2026-07-19-worklist.md  architecture-review-2026-07-19.md
src/healthspan/: __init__.py  __main__.py  api_health.py  api_import.py  api_metrics.py  api_read.py  api_security.py  api_tokens.py  audit.py  backup.py  cli.py  cli_client.py  cli_db.py  cli_entry.py  cli_keys.py  cli_service.py  cli_support.py  cli_token.py  config.py  db.py  fsperm.py  imports.py  kdf.py  keychain.py  keyparams.py  locking.py  logging_setup.py  migrate.py  paths.py  pool.py  provisioning.py  ranges.py  reads.py  recovery_kit.py  restore.py  rotation.py  service.py  service_runtime.py  token_bootstrap.py  tokens.py  (+1 more)
src/healthspan/migrations/: 0001_initial_schema.sql  0002_tokens_and_auth_audit.sql  0003_import_conflict_keys.sql  0004_categories_and_aliases.sql  0005_molar_mass_and_frameworks.sql  __init__.py
tests/: conftest.py  fixture_loader.py  test_api_auth.py  test_api_import.py  test_api_read.py  test_api_security.py  test_api_tokens.py  test_backup.py  test_bot_review.py  test_canary_capture.py  test_check_markdownlint_config_sync.py  test_check_spec_links.py  test_cli.py  test_cli_client.py  test_cli_db.py  test_cli_entry.py  test_cli_keys.py  test_cli_service.py  test_cli_token.py  test_config.py  test_config_auth.py  test_config_cli.py  test_config_service.py  test_db.py  test_fixture_loader.py  test_fsperm.py  test_gemini_review_logic.py  test_imports.py  test_kdf.py  test_kdf_properties.py  test_keyparams.py  test_locking.py  test_logging_setup.py  test_migrate.py  test_migration_0001.py  test_migration_0002.py  test_migration_0004.py  test_migration_0005.py  test_package.py  test_paths.py  (+17 more)
tests/fixtures/: catalog.json  lab_results.json  narrative.json  timeseries.json
typings/sqlcipher3/: __init__.pyi
typings/ucumvert/: __init__.pyi
