[project]
name = "healthspan"
version = "0.1.0.dev1"
description = "Local-first personal health data platform with MCP server for AI-assisted longitudinal analysis"
readme = "README.md"
authors = [
    { name = "Matthew Zaleski", email = "neuroticgamer01@zaleski.net" }
]
requires-python = ">=3.14"
license = "MIT"
dependencies = []

[project.urls]
Repository = "https://github.com/NeuroticGamer99/healthspan"
Issues = "https://github.com/NeuroticGamer99/healthspan/issues"

[project.scripts]
healthspan = "healthspan:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

# CI gate configuration — rationale in specs/testing-strategy.md (CI Gates).
# Tool version pins ride with the CI workflow, not here.

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "DTZ", "G", "LOG", "PT", "PGH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
enableTypeIgnoreComments = false
