[project]
name = "healthspan"
version = "0.1.0.dev1"
description = "Local-first personal health data platform with MCP server for AI-assisted longitudinal analysis"
readme = "README.md"
authors = [
    { name = "Matthew Zaleski", email = "neuroticgamer01@zaleski.net" }
]
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "argon2-cffi>=25.1.0",
    "keyring>=25.6",
    "platformdirs>=4.10.0",
    "qrcode>=8.0",
    "sqlcipher3-wheels>=0.5.7",
    "typer>=0.26.8",
]

[project.urls]
Repository = "https://github.com/NeuroticGamer99/healthspan"
Issues = "https://github.com/NeuroticGamer99/healthspan/issues"

[project.scripts]
healthspan = "healthspan.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

# CI gate configuration — rationale in specs/testing-strategy.md (CI Gates).
# Tool version pins ride with the CI workflow, not here.

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "DTZ", "G", "LOG", "PT", "PGH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
enableTypeIgnoreComments = false
# scripts/ is importable in tests via tests/conftest.py's sys.path entry;
# tests/ hosts the fixture loader that scripts/scan_log_canary.py imports as
# the canary-manifest owner (WI-3b).
extraPaths = ["scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.140",
]
