[project]
name = "healthspan"
version = "0.1.0.dev1"
description = "Local-first personal health data platform with MCP server for AI-assisted longitudinal analysis"
readme = "README.md"
authors = [
    { name = "Matthew Zaleski", email = "neuroticgamer01@zaleski.net" }
]
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "keyring>=25.6",
    "pint>=0.24.4",
    "platformdirs>=4.10.0",
    "qrcode>=8.0",
    "sqlcipher3-wheels>=0.5.7",
    "structlog>=26.1.0",
    "typer>=0.26.8",
    "ucumvert>=0.3.0,<0.4",
    "uvicorn[standard]>=0.51.0",
]

[project.urls]
Repository = "https://github.com/NeuroticGamer99/healthspan"
Issues = "https://github.com/NeuroticGamer99/healthspan/issues"

[project.scripts]
healthspan = "healthspan.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

# CI gate configuration — rationale in specs/testing-strategy.md (CI Gates).
# Tool version pins ride with the CI workflow, not here.

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "DTZ", "G", "LOG", "PT", "PGH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104", "S105", "S106"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
enableTypeIgnoreComments = false
# scripts/ is importable in tests via tests/conftest.py's sys.path entry;
# tests/ hosts the fixture loader that scripts/scan_log_canary.py imports as
# the canary-manifest owner (WI-3b).
extraPaths = ["scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Markdown style-lint gate (ADR-0062). Authoritative config for the PyMarkdown
# (`uvx pymarkdownlnt`) gate on the docs-consistency CI job.
#
# ⚠️  KEEP IN SYNC WITH .markdownlint.yaml (repo root). Our CI gate reads THIS
#     block; CodeRabbit reads that file. Any rule enable/disable/parameter change
#     here MUST be mirrored there, and vice versa — the rule numbers are shared.
#     (Exceptions, PyMarkdown-only, no mirror line there: `extensions.front-matter`
#     — markdownlint parses front matter natively — and `mode.strict-config`,
#     which only governs how PyMarkdown reacts to its own malformed config.)
[tool.pymarkdown]
mode.strict-config = true            # fail closed on a malformed/unsupported setting, don't silently default it
extensions.front-matter.enabled = true
plugins.md013.enabled = false        # line-length — house style: long em-dash prose
plugins.md022.enabled = false        # blanks-around-headings — house style: value tight under its `##`
plugins.md032.enabled = false        # blanks-around-lists — same tight-heading convention
plugins.md024.siblings_only = true   # `### Architecture` under different `##` parents is legitimate

[dependency-groups]
dev = [
    "hypothesis>=6.140",
    # For the editor (Pylance) and ad-hoc local runs; the CI gates still run
    # the version pinned in ci.yml via `uv run --with "pytest==..."`.
    "pytest>=9.1.1",
    # Parallel test execution (pytest -n auto). The suite is crypto/IO-bound and
    # well-isolated (per-tmp_path DBs and locks, in-memory keychain, uvicorn
    # monkeypatched out), so worker parallelism is a pure wall-clock win.
    "pytest-xdist>=3.6",
]
